Remove invisible svg elements, fix canvas view text mouseover.

--- a/css/style.css
+++ b/css/style.css
@@ -61,8 +61,9 @@ body {
 /* Main color */
 body {
 /*    background-image: linear-gradient(225deg, rgb(104,202,255) 10%, rgb(1, 1, 1) 100%);*/
-    background-image: radial-gradient(farthest-corner at 50% 80%, rgb(255, 255, 255), rgb(235, 235, 235));
+    background-image: radial-gradient(farthest-corner at 50% 80%, rgb(250, 250, 250), rgb(170, 170, 170));
 /*    background: radial-gradient(farthest-corner at 50% 0%, rgb(104,202,255), rgb(1, 1, 1));*/
+/*background: white;*/
 }
 .svgDiv, .tableDiv {
 /*    background: #FEFEFE;*/
@@ -220,7 +221,7 @@ path {
     width: 70px;
     transform-origin: 0% 0%;
     transform: translate(0px, 70px) rotate(270deg);
-    color: black;
+    color: white;
     background: rgba(20, 20, 20, 0.1);
     text-align: center;
     text-decoration: bold;
@@ -619,7 +620,7 @@ tbody {
 
 /* Rows and headers */
 .tableDiv th, #svgTop {
-    background: rgba(20, 20, 20, 0.1);
+/*    background: rgba(20, 20, 20, 0.1);*/
     cursor: pointer;
     font-weight: inherit;
     text-align: left;
@@ -646,6 +647,7 @@ tbody {
     height: 200px;
     overflow-x: scroll;
     overflow-y: hidden;
+    direction: rl-tb;
 }
 
 #topTable table {
